--- a/enter-expense/package.json
+++ b/enter-expense/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.627.0",
     "uuid": "^7.0.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^7.1.0",
+    "sinon": "^9.0.0"
   }
 }
