--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -26,7 +26,7 @@ phases:
   build:
     commands:
       - echo "Running tests"
-      - cd enter_expense
+      - cd enter-expense
       - npm ci
       - npm test
 
