--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -36,6 +36,8 @@ phases:
       ## Here we separate Build from Deployment and segregate permissions for different steps
       - echo "Starting SAM packaging `date` in `pwd`"
       - aws cloudformation package --template-file template.yml --s3-bucket $BUILD_OUTPUT_BUCKET --output-template-file packaged.yaml
+
+      - sam deploy
   post_build:
     commands:
       # Use Post Build for notifications, git tags and any further customization after build
