--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -26,11 +26,11 @@ phases:
   build:
     commands:
       - echo "Running tests"
-      - pushd enter-expense
+      - cd enter-expense
       - npm ci
       - npm test
-      - popd
-      
+      - cd ..
+
       # Use Build phase to build your artifacts (compile, package, etc.)
       # - echo "[Build phase]"
       # We package the SAM template and create `packaged.yaml` file that will be used in our pipeline for deployment
